--- a/scss/_navbar-top.scss
+++ b/scss/_navbar-top.scss
@@ -2,6 +2,7 @@
 .navbar-top{
   background-color: $color-primary-0;
   margin: 0;
+  margin-bottom: 16px;
   width: 100%;
 }
 
@@ -9,6 +10,8 @@
   color: #FFF;
   font-family: "Carrois Gothic SC", sans-serif;
   font-size: 54px;
+  margin: 0;
+  padding: 16px;
   text-align: center;
 }
 
@@ -18,10 +21,23 @@
   width: 100%;
 }
 
-.navbar-top_links h2{
+.navbar-top_links *{
   color: #FFF;
   display: inline-block;
-  font-family: "Alegreya Sans SC", sans-serif;
+  font-family: "Carrois Gothic SC", sans-serif;
   font-size: 32px;
-  width: 20%;
+  margin: 0;
+  padding: 16px;
+  text-decoration: none;
+  width: 25%;
+}
+
+.navbar-top_links h2{
+  background-color: $color-primary-2;
+  border: 3px solid $color-primary-1;
+  padding: 13px;
+}
+
+.navbar-top_links a:hover{
+  background-color: $color-primary-4;
 }
