--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,10 +1,23 @@
 // IMPORTS - PALETTES
 @import "./paletton-01";
+@import "./paletton-01_bright";
 
 // IMPORTS - STYLES
 @import "./navbar-top";
+@import "./about";
+@import "./projects";
 
 // STYLES - UNIVERSAL
 *{box-sizing: border-box;}
 
 .columns-container{font-size: 0;}
+
+body{
+  background-color: #222;
+  height: 100vh;
+  margin: 0;
+}
+
+#app-container{
+  margin: 0;
+}
