--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,6 @@
+// IMPORTS - ICONS
+@import "../css/iwb-portfolio.css";
+
 // IMPORTS - PALETTES
 @import "./paletton-01";
 @import "./paletton-01_bright";
