featured projects altered

--- a/css/styles.css
+++ b/css/styles.css
@@ -91,11 +91,47 @@
   font-size: 20px;
   margin-bottom: 16px; }
 
-.project-block h4 {
-  font-size: 32px; }
+.section-projects {
+  background: rgba(255, 255, 255, 0.75);
+  margin: auto;
+  margin-top: 32px;
+  padding: 16px;
+  width: 95%; }
 
-.project-block p {
-  font-size: 16px; }
+.project-pane {
+  width: 40%; }
+
+.hexagon {
+  position: relative;
+  width: 120px;
+  height: 69.28px;
+  background-color: #49A9A9;
+  margin: 34.64px 0;
+  border-left: solid 5px #0B8D8D;
+  border-right: solid 5px #0B8D8D; }
+
+.hexagon:before,
+.hexagon:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  width: 84.85px;
+  height: 84.85px;
+  -webkit-transform: scaleY(0.5774) rotate(-45deg);
+  -ms-transform: scaleY(0.5774) rotate(-45deg);
+  transform: scaleY(0.5774) rotate(-45deg);
+  background-color: inherit;
+  left: 12.5736px; }
+
+.hexagon:before {
+  top: -42.4264px;
+  border-top: solid 7.0711px #0B8D8D;
+  border-right: solid 7.0711px #0B8D8D; }
+
+.hexagon:after {
+  bottom: -42.4264px;
+  border-bottom: solid 7.0711px #0B8D8D;
+  border-left: solid 7.0711px #0B8D8D; }
 
 * {
   box-sizing: border-box; }
@@ -110,5 +146,8 @@ body {
 
 #app-container {
   margin: 0; }
+
+img {
+  width: 100%; }
 
 /*# sourceMappingURL=styles.css.map */
