--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,7 +1,49 @@
-.project-block h4{
-  font-size: 32px;
+.section-projects{
+  background: rgba(255,255,255,.75);
+  margin: auto;
+  margin-top: 32px;
+  padding: 16px;
+  width: 95%;
 }
 
-.project-block p{
-  font-size: 16px;
+.project-pane{
+  width: 40%;
+}
+
+
+// CSS HEXAGONS
+.hexagon {
+  position: relative;
+  width: 120px;
+  height: 69.28px;
+  background-color: $color-secondary-2-1;
+  margin: 34.64px 0;
+  border-left: solid 5px $color-secondary-2-0;
+  border-right: solid 5px $color-secondary-2-0;
+}
+
+.hexagon:before,
+.hexagon:after {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  width: 84.85px;
+  height: 84.85px;
+  -webkit-transform: scaleY(0.5774) rotate(-45deg);
+  -ms-transform: scaleY(0.5774) rotate(-45deg);
+  transform: scaleY(0.5774) rotate(-45deg);
+  background-color: inherit;
+  left: 12.5736px;
+}
+
+.hexagon:before {
+  top: -42.4264px;
+  border-top: solid 7.0711px $color-secondary-2-0;
+  border-right: solid 7.0711px $color-secondary-2-0;
+}
+
+.hexagon:after {
+  bottom: -42.4264px;
+  border-bottom: solid 7.0711px $color-secondary-2-0;
+  border-left: solid 7.0711px $color-secondary-2-0;
 }
