--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -6,44 +6,109 @@
   width: 95%;
 }
 
+.section-projects h3{
+  font-family: "Carrois Gothic SC", sans-serif;
+  font-size: 40px;
+  margin: 16px;
+  text-align: center;
+}
+
+.project-pane, .project-text{
+  display: inline-block;
+}
+
 .project-pane{
   width: 40%;
 }
 
+.project-text{
+  padding: 16px;
+  width: 60%;
+}
+
+.project-text h4{
+  font-family: "Alegreya Sans SC", sans-serif;
+  font-size: 32px;
+}
+
+.project-text p{
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  line-height: 175%;
+}
+
+.project-text ul{
+  margin: 0;
+}
+
+.project-text li{
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  margin-bottom: 8px;
+}
+
+.project-links{
+  margin: 24px;
+}
+
+.project-links a{
+  font-family: "Carrois Gothic SC", sans-serif;
+  font-size: 24px;
+  padding: 8px;
+  text-decoration: none;
+}
+
+.link-demo, .link-repo{
+  display: inline-block;
+  text-align: center;
+  width: 50%;
+}
+
+.link-demo a{
+  border: 4px solid $color-complement-3;
+  border-radius: 8px;
+  color: $color-complement-3;
+}
+
+.link-repo a{
+  border: 4px solid $color-primary-2;
+  border-radius: 8px;
+  color: $color-primary-2;
+}
 
 // CSS HEXAGONS
-.hexagon {
-  position: relative;
-  width: 120px;
-  height: 69.28px;
-  background-color: $color-secondary-2-1;
-  margin: 34.64px 0;
-  border-left: solid 5px $color-secondary-2-0;
-  border-right: solid 5px $color-secondary-2-0;
-}
-
-.hexagon:before,
-.hexagon:after {
-  content: "";
-  position: absolute;
-  z-index: 1;
-  width: 84.85px;
-  height: 84.85px;
-  -webkit-transform: scaleY(0.5774) rotate(-45deg);
-  -ms-transform: scaleY(0.5774) rotate(-45deg);
-  transform: scaleY(0.5774) rotate(-45deg);
-  background-color: inherit;
-  left: 12.5736px;
-}
-
-.hexagon:before {
-  top: -42.4264px;
-  border-top: solid 7.0711px $color-secondary-2-0;
-  border-right: solid 7.0711px $color-secondary-2-0;
-}
-
-.hexagon:after {
-  bottom: -42.4264px;
-  border-bottom: solid 7.0711px $color-secondary-2-0;
-  border-left: solid 7.0711px $color-secondary-2-0;
-}
+// .hexagon {
+//   position: relative;
+//   width: 120px;
+//   height: 69.28px;
+//   background-color: $color-secondary-2-1;
+//   margin: 34.64px 0;
+//   border-left: solid 5px $color-secondary-2-0;
+//   border-right: solid 5px $color-secondary-2-0;
+// }
+//
+// .hexagon:before,
+// .hexagon:after {
+//   content: "";
+//   position: absolute;
+//   z-index: 1;
+//   width: 84.85px;
+//   height: 84.85px;
+//   -webkit-transform: scaleY(0.5774) rotate(-45deg);
+//   -ms-transform: scaleY(0.5774) rotate(-45deg);
+//   transform: scaleY(0.5774) rotate(-45deg);
+//   background-color: inherit;
+//   left: 12.5736px;
+// }
+//
+// .hexagon:before {
+//   top: -42.4264px;
+//   border-top: solid 7.0711px $color-secondary-2-0;
+//   border-right: solid 7.0711px $color-secondary-2-0;
+// }
+//
+// .hexagon:after {
+//   bottom: -42.4264px;
+//   border-bottom: solid 7.0711px $color-secondary-2-0;
+//   border-left: solid 7.0711px $color-secondary-2-0;
+// }
