--- a/css/styles.css
+++ b/css/styles.css
@@ -104,11 +104,30 @@
   margin: 16px;
   text-align: center; }
 
+.project-block {
+  margin-bottom: 64px; }
+
 .project-pane, .project-text {
-  display: inline-block; }
+  display: inline-block;
+  vertical-align: middle; }
 
 .project-pane {
   width: 40%; }
+
+.project-pane_hextext {
+  position: absolute; }
+
+.project-pane_hextext p {
+  font-family: "Carrois Gothic SC", sans-serif;
+  font-size: 24px;
+  margin: 0;
+  text-align: center; }
+
+.project-pane_hextext h4 {
+  font-family: "Carrois Gothic SC", sans-serif;
+  font-size: 32px;
+  margin: 0;
+  text-align: center; }
 
 .project-text {
   padding: 16px;
@@ -116,12 +135,15 @@
 
 .project-text h4 {
   font-family: "Alegreya Sans SC", sans-serif;
-  font-size: 32px; }
+  font-size: 32px;
+  text-align: center;
+  margin: 8px; }
 
 .project-text p {
   font-family: "Roboto", sans-serif;
   font-size: 20px;
-  line-height: 175%; }
+  line-height: 175%;
+  margin: 8px; }
 
 .project-text ul {
   margin: 0; }
@@ -129,10 +151,11 @@
 .project-text li {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
+  margin: 0;
   margin-bottom: 8px; }
 
 .project-links {
-  margin: 24px; }
+  margin-top: 32px; }
 
 .project-links a {
   font-family: "Carrois Gothic SC", sans-serif;
@@ -154,6 +177,30 @@
   border: 4px solid #6439A6;
   border-radius: 8px;
   color: #6439A6; }
+
+.hexagon {
+  position: relative;
+  width: 100px;
+  height: 57.74px;
+  background-color: #299393;
+  margin: 28.87px 0; }
+
+.hexagon:before,
+.hexagon:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent; }
+
+.hexagon:before {
+  bottom: 100%;
+  border-bottom: 28.87px solid #299393; }
+
+.hexagon:after {
+  top: 100%;
+  width: 0;
+  border-top: 28.87px solid #299393; }
 
 * {
   box-sizing: border-box; }
