--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,3 +1,4 @@
+// STYLES - PROJECTS PAGE
 .section-projects{
   background: rgba(255,255,255,.75);
   margin: auto;
@@ -13,14 +14,40 @@
   text-align: center;
 }
 
+// PROJECT BLOCKS
+.project-block{
+  margin-bottom: 64px;
+}
+
+// IMAGES AND CAPTIONS
 .project-pane, .project-text{
   display: inline-block;
+  vertical-align: middle;
 }
 
 .project-pane{
   width: 40%;
 }
 
+.project-pane_hextext{
+  position: absolute;
+}
+
+.project-pane_hextext p{
+  font-family: "Carrois Gothic SC", sans-serif;
+  font-size: 24px;
+  margin: 0;
+  text-align: center;
+}
+
+.project-pane_hextext h4{
+  font-family: "Carrois Gothic SC", sans-serif;
+  font-size: 32px;
+  margin: 0;
+  text-align: center;
+}
+
+// TEXT
 .project-text{
   padding: 16px;
   width: 60%;
@@ -29,12 +56,15 @@
 .project-text h4{
   font-family: "Alegreya Sans SC", sans-serif;
   font-size: 32px;
+  text-align: center;
+  margin: 8px;
 }
 
 .project-text p{
   font-family: "Roboto", sans-serif;
   font-size: 20px;
   line-height: 175%;
+  margin: 8px;
 }
 
 .project-text ul{
@@ -44,11 +74,13 @@
 .project-text li{
   font-family: "Roboto", sans-serif;
   font-size: 16px;
+  margin: 0;
   margin-bottom: 8px;
 }
 
+// LINKS
 .project-links{
-  margin: 24px;
+  margin-top: 32px;
 }
 
 .project-links a{
@@ -77,38 +109,30 @@
 }
 
 // CSS HEXAGONS
-// .hexagon {
-//   position: relative;
-//   width: 120px;
-//   height: 69.28px;
-//   background-color: $color-secondary-2-1;
-//   margin: 34.64px 0;
-//   border-left: solid 5px $color-secondary-2-0;
-//   border-right: solid 5px $color-secondary-2-0;
-// }
-//
-// .hexagon:before,
-// .hexagon:after {
-//   content: "";
-//   position: absolute;
-//   z-index: 1;
-//   width: 84.85px;
-//   height: 84.85px;
-//   -webkit-transform: scaleY(0.5774) rotate(-45deg);
-//   -ms-transform: scaleY(0.5774) rotate(-45deg);
-//   transform: scaleY(0.5774) rotate(-45deg);
-//   background-color: inherit;
-//   left: 12.5736px;
-// }
-//
-// .hexagon:before {
-//   top: -42.4264px;
-//   border-top: solid 7.0711px $color-secondary-2-0;
-//   border-right: solid 7.0711px $color-secondary-2-0;
-// }
-//
-// .hexagon:after {
-//   bottom: -42.4264px;
-//   border-bottom: solid 7.0711px $color-secondary-2-0;
-//   border-left: solid 7.0711px $color-secondary-2-0;
-// }
+.hexagon {
+  position: relative;
+  width: 100px;
+  height: 57.74px;
+  background-color: $color-secondary-2-2;
+  margin: 28.87px 0;
+}
+
+.hexagon:before,
+.hexagon:after {
+  content: "";
+  position: absolute;
+  width: 0;
+  border-left: 50px solid transparent;
+  border-right: 50px solid transparent;
+}
+
+.hexagon:before {
+  bottom: 100%;
+  border-bottom: 28.87px solid $color-secondary-2-2;
+}
+
+.hexagon:after {
+  top: 100%;
+  width: 0;
+  border-top: 28.87px solid $color-secondary-2-2;
+}
