--- a/css/styles.css
+++ b/css/styles.css
@@ -100,22 +100,36 @@
 
 .section-projects h3 {
   font-family: "Carrois Gothic SC", sans-serif;
-  font-size: 40px;
+  font-size: 48px;
   margin: 16px;
   text-align: center; }
 
 .project-block {
-  margin-bottom: 64px; }
+  border-bottom: 3px solid #444;
+  margin-bottom: 16px;
+  margin-top: 16px;
+  padding: 8px; }
 
 .project-pane, .project-text {
   display: inline-block;
   vertical-align: middle; }
 
 .project-pane {
+  vertical-align: top;
   width: 40%; }
 
+.project-pane_hextext, .project-pane_infobar {
+  display: inline-block; }
+
 .project-pane_hextext {
-  position: absolute; }
+  background-color: #49A9A9;
+  border: 4px solid #299393;
+  bottom: 24px;
+  left: 16px;
+  padding: 8px;
+  position: relative;
+  width: 25%;
+  z-index: 100; }
 
 .project-pane_hextext p {
   font-family: "Carrois Gothic SC", sans-serif;
@@ -129,15 +143,33 @@
   margin: 0;
   text-align: center; }
 
+.project-pane_infobar {
+  background-color: #90b6ff;
+  border: 2px solid #7395d5;
+  bottom: 24px;
+  left: 16px;
+  padding: 8px;
+  position: relative;
+  width: 70%; }
+
+.project-pane_infobar p {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  margin: 4px; }
+
+.proj_taskmaster .project-pane_infobar {
+  bottom: 32px; }
+
 .project-text {
   padding: 16px;
   width: 60%; }
 
 .project-text h4 {
   font-family: "Alegreya Sans SC", sans-serif;
-  font-size: 32px;
-  text-align: center;
-  margin: 8px; }
+  font-size: 40px;
+  margin: 0px;
+  margin-bottom: 8px;
+  text-align: center; }
 
 .project-text p {
   font-family: "Roboto", sans-serif;
@@ -155,7 +187,14 @@
   margin-bottom: 8px; }
 
 .project-links {
-  margin-top: 32px; }
+  background-color: rgba(255, 255, 255, 0.5);
+  border: solid 4px #FFF;
+  border-radius: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+  padding: 16px;
+  width: 50%; }
 
 .project-links a {
   font-family: "Carrois Gothic SC", sans-serif;
@@ -165,42 +204,38 @@
 
 .link-demo, .link-repo {
   display: inline-block;
-  text-align: center;
+  padding: 8px;
   width: 50%; }
+
+.link-demo {
+  text-align: right; }
+
+.link-repo {
+  text-align: left; }
+
+.proj_taskmaster .link-repo {
+  text-align: center;
+  width: 100%; }
 
 .link-demo a {
   border: 4px solid #3C9F06;
   border-radius: 8px;
   color: #3C9F06; }
 
+.link-demo a:hover {
+  background-color: #3C9F06;
+  color: #FFF;
+  border: 4px solid #FFF; }
+
 .link-repo a {
   border: 4px solid #6439A6;
   border-radius: 8px;
   color: #6439A6; }
 
-.hexagon {
-  position: relative;
-  width: 100px;
-  height: 57.74px;
-  background-color: #299393;
-  margin: 28.87px 0; }
-
-.hexagon:before,
-.hexagon:after {
-  content: "";
-  position: absolute;
-  width: 0;
-  border-left: 50px solid transparent;
-  border-right: 50px solid transparent; }
-
-.hexagon:before {
-  bottom: 100%;
-  border-bottom: 28.87px solid #299393; }
-
-.hexagon:after {
-  top: 100%;
-  width: 0;
-  border-top: 28.87px solid #299393; }
+.link-repo a:hover {
+  background-color: #6439A6;
+  border: 4px solid #FFF;
+  color: #FFF; }
 
 * {
   box-sizing: border-box; }
