--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -9,14 +9,17 @@
 
 .section-projects h3{
   font-family: "Carrois Gothic SC", sans-serif;
-  font-size: 40px;
+  font-size: 48px;
   margin: 16px;
   text-align: center;
 }
 
 // PROJECT BLOCKS
 .project-block{
-  margin-bottom: 64px;
+  border-bottom: 3px solid #444;
+  margin-bottom: 16px;
+  margin-top: 16px;
+  padding: 8px;
 }
 
 // IMAGES AND CAPTIONS
@@ -26,11 +29,23 @@
 }
 
 .project-pane{
+  vertical-align: top;
   width: 40%;
 }
 
+.project-pane_hextext, .project-pane_infobar{
+  display: inline-block;
+}
+
 .project-pane_hextext{
-  position: absolute;
+  background-color: $color-secondary-2-1;
+  border: 4px solid $color-secondary-2-2;
+  bottom: 24px;
+  left: 16px;
+  padding: 8px;
+  position: relative;
+  width: 25%;
+  z-index: 100;
 }
 
 .project-pane_hextext p{
@@ -47,6 +62,26 @@
   text-align: center;
 }
 
+.project-pane_infobar{
+  background-color: #90b6ff;
+  border: 2px solid #7395d5;
+  bottom: 24px;
+  left: 16px;
+  padding: 8px;
+  position: relative;
+  width: 70%;
+}
+
+.project-pane_infobar p{
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  margin: 4px;
+}
+
+.proj_taskmaster .project-pane_infobar{
+  bottom: 32px;
+}
+
 // TEXT
 .project-text{
   padding: 16px;
@@ -55,9 +90,10 @@
 
 .project-text h4{
   font-family: "Alegreya Sans SC", sans-serif;
-  font-size: 32px;
+  font-size: 40px;
+  margin: 0px;
+  margin-bottom: 8px;
   text-align: center;
-  margin: 8px;
 }
 
 .project-text p{
@@ -80,7 +116,14 @@
 
 // LINKS
 .project-links{
-  margin-top: 32px;
+  background-color: rgba(255,255,255,.5);
+  border: solid 4px #FFF;
+  border-radius: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 40px;
+  padding: 16px;
+  width: 50%;
 }
 
 .project-links a{
@@ -92,8 +135,21 @@
 
 .link-demo, .link-repo{
   display: inline-block;
-  text-align: center;
+  padding: 8px;
   width: 50%;
+}
+
+.link-demo{
+  text-align: right;
+}
+
+.link-repo{
+  text-align: left;
+}
+
+.proj_taskmaster .link-repo{
+  text-align: center;
+  width: 100%;
 }
 
 .link-demo a{
@@ -102,37 +158,49 @@
   color: $color-complement-3;
 }
 
+.link-demo a:hover{
+  background-color: $color-complement-3;
+  color: #FFF;
+  border: 4px solid #FFF;
+}
+
 .link-repo a{
   border: 4px solid $color-primary-2;
   border-radius: 8px;
   color: $color-primary-2;
 }
 
+.link-repo a:hover{
+  background-color: $color-primary-2;
+  border: 4px solid #FFF;
+  color: #FFF;
+}
+
 // CSS HEXAGONS
-.hexagon {
-  position: relative;
-  width: 100px;
-  height: 57.74px;
-  background-color: $color-secondary-2-2;
-  margin: 28.87px 0;
-}
-
-.hexagon:before,
-.hexagon:after {
-  content: "";
-  position: absolute;
-  width: 0;
-  border-left: 50px solid transparent;
-  border-right: 50px solid transparent;
-}
-
-.hexagon:before {
-  bottom: 100%;
-  border-bottom: 28.87px solid $color-secondary-2-2;
-}
-
-.hexagon:after {
-  top: 100%;
-  width: 0;
-  border-top: 28.87px solid $color-secondary-2-2;
-}
+// .hexagon {
+//   position: relative;
+//   width: 100px;
+//   height: 57.74px;
+//   background-color: $color-secondary-2-2;
+//   margin: 28.87px 0;
+// }
+//
+// .hexagon:before,
+// .hexagon:after {
+//   content: "";
+//   position: absolute;
+//   width: 0;
+//   border-left: 50px solid transparent;
+//   border-right: 50px solid transparent;
+// }
+//
+// .hexagon:before {
+//   bottom: 100%;
+//   border-bottom: 28.87px solid $color-secondary-2-2;
+// }
+//
+// .hexagon:after {
+//   top: 100%;
+//   width: 0;
+//   border-top: 28.87px solid $color-secondary-2-2;
+// }
